# captree-rs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  generate_pointcloud_data.py  pointcloud_viz.cc
.github/workflows/: rust.yml
afftree/: CMakeLists.txt  Cargo.toml
afftree/src/: affordance.rs  forest.rs  lib.rs
afftree_bench/: Cargo.toml
afftree_bench/scripts/: plot_error_hist.py  plot_forest_error.py  plot_times_for_blog.py
afftree_bench/src/: lib.rs
afftree_ffi/: CMakeLists.txt  Cargo.toml  build.rs
afftree_ffi/src/: lib.rs
bench/: Cargo.toml
bench/scripts/: plot_filter_strength.py  plot_times_for_blog.py
bench/src/: forest.rs  kdt.rs  lib.rs
captree/: Cargo.toml
captree/src/: affordance.rs  forest.rs  lib.rs
experiments/: vol_kd.py
hilbert_test/: CMakeLists.txt  README.md  hdf5_filter.cc  hilbert-sort.h  hilbert.cc  hilbert.hh  hilbert_test.cc
morton_filter/: Cargo.toml
morton_filter/src/: lib.rs
nigh_bench/: CMakeLists.txt  Makefile  README.md  nigh_bench.cc  nigh_bench.cpp
pkdt/: Cargo.toml
pkdt/src/: affordance.rs  ball.rs  forest.rs  lib.rs  pointcloud_io.rs
pkdt_bench/: Cargo.toml
pkdt_bench/scripts/: plot_affordance_time.py  plot_bail_error_hist.py  plot_error_hist.py  plot_forest_error.py  plot_times_for_blog.py
pkdt_bench/src/: lib.rs
scripts/: plot_error_hist.py
src/: lib.rs  main.rs
