[package]
name = "afftree_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afftree = {version = "0.1.0", path = "../afftree"}
cxx = "1.0.115"
rand = "0.8.5"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]
