[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
captree = { version = "0.1.0", path = "../captree", features = ["simd"] }
morton_filter = { version = "0.1.0", path = "../morton_filter" }
kiddo = { version = "5.2.2", features = ["simd"] }
rand = "0.9.1"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
