[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
captree = { version = "0.1.0", path = "../captree", features = ["simd"] }
morton_filter = { version = "0.1.0", path = "../morton_filter" }
kiddo = { version = "5.2.2", features = ["simd"], default-features = false }
rand = { version = "0.9.1", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }
rand_distr = { version = "0.5.1", default-features = false }
