[package]
name = "captree"
version = "0.1.0"
edition = "2021"
description = "SIMD-accelerated nearest-neighbors for point cloud collision checking"
repository = "https://github.com/KavrakiLab/captree-rs"
license = "PolyForm-Noncommercial-1.0.0"
readme = "../README.md"
keywords = [
    "robotics",
    "collision checking",
    "simd",
    "nearest neighbor",
    "point cloud",
]
categories = ["no-std", "science", "science::robotics", "algorithms"]

[dev-dependencies]
rand = "0.9.1"

[features]
simd = []

[dependencies]
elain = { version = "0.3.0", default-features = false }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
