[package]
name = "morton_filter"
version = "0.1.0"
edition = "2021"
description = "Space-filling curve computations for point cloud filtering"
repository = "https://github.com/KavrakiLab/captree-rs"
license = "PolyForm-Noncommercial-1.0.0"
readme = "../README.md"
keywords = [
    "robotics",
    "collision checking",
    "simd",
    "nearest neighbor",
    "point cloud",
]
categories = ["no-std", "science", "science::robotics", "algorithms"]
publish = false
