[package]
name = "pkdt_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5 = { git = "https://github.com/aldanor/hdf5-rust", rev = "26046fb" }
pkdt = {version = "0.1.0", path = "../pkdt"}
kiddo = "2.1.2"
rand = "0.8.5"
rand_chacha = "0.3.1"

[profile.release]
lto = true
debug = false
codegen-units = 1
